vsCSSArt/index_files/site.css
/* 
    Created on : Jan 31, 2023, 3:21:44 PM
    Author     : Okino Kamali Leiba
*/

/*! HTML5 Boilerplate v5.3.0 | MIT License | https://html5boilerplate.com/ */

/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * These selection rule sets have to be separate.
 * Customize the background color to match your design.
 */

:root {
    --right-button-long-transform-LR: 314.5px;
    --right-button-long-transform-UD: 154px;
    --right-button-short-transform-LR: 332.5px;
    --right-button-short-transform-UD: 234px;
    --phone-container-radius: 1.3em;
}


::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

html {
    color: #390099;
    font-size: 1em;
    line-height: 1.4;
}


/* Move down content because we have a fixed navbar that is 50px tall */
body {
    padding-top: .5px;
    padding-bottom: .3px;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}

/* Wrapping element */
/* Set some basic padding to keep content from hitting the edges */
.body-content {
    padding-left: 15px;
    padding-right: 15px;
}

/* Set widths on the form inputs since otherwise they're 100% wide */
input,
select,
textarea {
    max-width: 280px;
}


/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
    .jumbotron {
        margin-top: 20px;
    }

    .body-content {
        padding: 0;
    }
}



/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}



/* ==========================================================================
   Okino's Custom Styles
   ========================================================================== */
#bg-yellow-pg {
    background-color: #a3b18a;
    position: relative;
    display: flex;
    flex-direction: column;
    gap: 16px;
    width: 100vw;
    height: 100vh;
    justify-content: center;
    align-items: center
}

#phone-container {
    position: relative;
    margin-top: 0px;
    margin-bottom: 0px;
    border: medium outset #333533;
    border-radius: var(--phone-container-radius);
    height: 634.84995072px;
    width: 347.904px;
    background-color: #212529;
}


.front-camera-circle {
    margin-left: 121px;
    margin-top: 1.5px;
    border: thin solid #f8f9fa;
    border-radius: 50px;
    height: 14.8px;
    width: 14.3px;
    background-color: black;
}
/*
[class="phone-container"]:nth-last-child(2) {
    padding-left: 30%;
    padding-top: 50%;
    right: 0;
}*/

#right-button-long {
    border-radius: 50px;
    width: 70.8px;
    height: 3.2px;
    /*background: #242423;*/
    background-color: red;
    transform: translate(var(--right-button-long-transform-LR), var(--right-button-long-transform-UD)) rotate(90deg);
    -webkit-transform: translate(var(--right-button-long-transform-LR), var(--right-button-long-transform-UD)) rotate(90deg);
    -moz-transform: translate(var(--right-button-long-transform-LR), var(--right-button-long-transform-UD)) rotate(90deg);
    -o-transform: translate(var(--right-button-long-transform-LR), var(--right-button-long-transform-UD)) rotate(90deg);
    -ms-transform: translate(var(--right-button-long-transform-LR), var(--right-button-long-transform-UD)) rotate(90deg);
    /*310.5px, 200px*/
}

#right-button-short {
    border-radius: 50px;
    width: 35.8px;
    height: 3.2px;
    /*background: #242423;*/
    background-color: red;
    transform: translate(var(--right-button-short-transform-LR), var(--right-button-short-transform-UD)) rotate(90deg);
    -webkit-transform: translate(var(--right-button-short-transform-LR), var(--right-button-short-transform-UD)) rotate(90deg);
    -moz-transform: translate(var(--right-button-short-transform-LR), var(--right-button-short-transform-UD)) rotate(90deg);
    -o-transform: translate(var(--right-button-short-transform-LR), var(--right-button-short-transform-UD)) rotate(90deg);
    -ms-transform: translate(var(--right-button-short-transform-LR), var(--right-button-short-transform-UD)) rotate(90deg);
}

/*
 * First Phone Screen
 */

.phone-screen-background {
    position: relative;
    border: #333533;
    border-radius: var(--phone-container-radius);
    height: 627.849951px;
    width: 344.904px;
    background-image: url(https://cdn.cnn.com/cnnnext/dam/assets/220531142331-bisa-butler-ella-restricted.jpg);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    display: none;
    transition-delay: 0.3s;
    -webkit-transition-delay: 0.3s;
    -moz-transition: 0.3s;
    -o-transition-delay: 0.3s;
    -ms-transition-delay: 0.3s;
}



#bt-inv-center-toggle {
    position: relative;
    margin-left: 0px;
    color: #f7fff7;
    height: 55.8px;
    width: 58.8px;
    transform: translate(134.5px, 514px);
    -webkit-transform: translate(134.5px, 514px);
    -moz-transform: translate(134.5px, 514px);
    -o-transform: translate(134.5px, 514px);
    -ms-transform: translate(134.5px, 514px);
}


.bg-group-landing_screen {
    position: inherit;
    padding: -0.3px;
}
/* ... */

